--- a/diskussion.tex
+++ b/diskussion.tex
@@ -8,6 +8,8 @@ Für eine erfolgreiche Umsetzung der Arbeit stehen die Anforderungen an die Modu
 Mit dem Einsatz der \glqq Eclipse Rich Client Platform\grqq\ und dem zugehörigen OSGi-Framework \glqq Equinox\grqq\ wird eine modulare Anwendungsstruktur geschaffen. Durch das Hinzufügen von neuen Strukturelementen des Application Models und deren Implementierung kann jMediKit um neue Module erweitert werden. Dadurch wird die Tiefe der Anwendung mit den zur Verfügung stehenden Grundfunktionen erweitert. So ist es zum Beispiel möglich, die Anwendung um einen Bereich zu erweitern, der aus den Voxeldaten dreidimensionale Darstellungen berechnet.\\
 Um neue Module zu entwickeln, ist neben der Kenntnis der Struktur von jMediKit auch eine Einarbeitung in die Architektur der Eclipse-Plattform notwendig. Die Werkzeuge sind zum Beispiel fest mit der jMediKit-Architektur durch das Fabrikmuster verankert. Für eine Erweiterung benötigt ein Entwickler das Wissen zu Werkzeugleisten der Eclipse-Plattform und zur Werkzeugentwicklung von jMediKit. Zusätzlich können neue Funktionen ausschließlich nach einem erneuten Buildprozess der Anwendung hinzugefügt werden. Dadurch ist keine dynamische Modulerweiterung des aktuellen Systems möglich.
 
+\pagebreak
+
 \section*{Erweiterbarkeit}
 Das Architekturmuster Plug-in stellt diesen dynamischen Aspekt der Anwendungserweiterung zur Verfügung. Das bedeutet, Klassen können auch nach der Kompilierung zu dem System hinzugefügt werden. Dadurch wird eine Erweiterung möglich, ohne genaue Kenntnis des Systems und seine interne Funktionsweise besitzen zu müssen. Trotz des dynamischen Charakters sind die vom Anwender entwickelten Erweiterungen auf die Aspekte der Bildverarbeitung beschränkt und können keine Beiträge zur Anwendungsstruktur leisten.
 
