--- a/einleitung.tex
+++ b/einleitung.tex
@@ -6,8 +6,7 @@ Das Programm soll für Forschung und Lehre im Labor für medizinische Bildverarb
 
 \section{Der sechste Kondratieff-Zyklus}
 Im Jahr 1926 veröffentlichte der Wirtschaftswissenschaftler Nikolai D. Kondratieff (* 1892, \dag 1938) die Theorie \glqq Die Langen Wellen der Konjunktur\grqq\ \cite{hensen:gesundeGesellschaft}.
-Leo Nefiodow erweiterte 2006 die Theorie, um die Entwicklung des 20. Jahrhunderts mit einfließen lassen zu können.\\
-Kondratieff zeigte, dass sich die gesellschaftliche Wandlung nicht willkürlich vollzog. Seit der Industrialisierung Mitte des 18. Jahrhunderts stand der Wohlstand der Gesellschaft in direkter Beziehung zu besonderen Erfindungen. Er betrachtete die Phasen des Wohlstandes und die der direkt folgenden Wirtschaftskrisen und entdeckte die später nach ihm benannten \glqq Kondratieff-Zyklen\grqq.
+Leo Nefiodow erweiterte 2006 die Theorie, um die Entwicklung des 20. Jahrhunderts mit einfließen lassen zu können. Kondratieff zeigte, dass sich die gesellschaftliche Wandlung nicht willkürlich vollzog. Seit der Industrialisierung Mitte des 18. Jahrhunderts stand der Wohlstand der Gesellschaft in direkter Beziehung zu besonderen Erfindungen. Er betrachtete die Phasen des Wohlstandes und die der direkt folgenden Wirtschaftskrisen und entdeckte die später nach ihm benannten \glqq Kondratieff-Zyklen\grqq.
 Wie in Abbildung \ref{zyklen} zu sehen ist, war die Dampfmaschine die erste Basisinnovation\footnote{Basisinnovationen müssen nach Nefiodow vier Eigenschaften erfüllen: Entstehung eines neuen Marktes mit vielen Arbeitsplätzen; Innovation bestimmt den Zyklus; Basisinnovationen haben einen Zyklus von 40 - 60 Jahren; Sie bestimmen die Entwicklungsrichtung} und revolutionierte die Textilindustrie.\cite{wieden:liquidwork}
 
 %\begin{wrapfigure}{c}{10cm}
@@ -20,7 +19,7 @@ Wie in Abbildung \ref{zyklen} zu sehen ist, war die Dampfmaschine die erste Basi
 \begin{figure}[htbp]
   \vspace{0.5cm}
   \centering
-  \fbox{\includegraphics[angle=0,width=12cm]{./img/zyklen.pdf}}
+  \fbox{\includegraphics[angle=0,width=0.8\textwidth]{./img/zyklen.pdf}}
   \caption{Kondratieff-Zyklen \cite[S.32]{hensen:gesundeGesellschaft}}
   \label{zyklen}
   \vspace{0.5cm}
@@ -29,7 +28,10 @@ Wie in Abbildung \ref{zyklen} zu sehen ist, war die Dampfmaschine die erste Basi
 Diese Erfindung gilt als Beginn des ersten Kondratieff-Zyklus. Vor dem maschinellen Betrieb wurden Spinnräder noch manuell bedient und Kleidung war teuer. Die dampfbetriebenen Webstühle steigerten
 die Effizienz um das 200-fache. In den 20er Jahren stagnierte die Branche, da die Rohstoffbeschaffung und Warenverteilung das Maximum der Effizienz erreicht hatte. Mit der Erfindung der Eisenbahn gelang der Übergang vom ersten in den zweiten Zyklus. In den folgenden Jahren konnte nun das Bedürfnis nach verbesserten Transportmöglichkeiten gestillt werden.\\
 Dampfmaschine, Eisenbahn, Strom, Motor und der Mikrochip stehen alle für eine Basisinnovation, die zukünftige Gesellschaften geprägt haben. Im Lauf der Zeit verschwinden die Erfindungen aus dem Bewusstsein der Menschen und werden zu Gegenständen des Alltags. Motor und Mikrochip sind so stark im gesellschaftlichen Leben verankert, dass sie nicht mehr direkt wahrgenommen werden. Betrachtet man eine elektrische Zahnbürste, ist es selbstverständlich, dass die Energie aus dem Stromnetz bezogen und der Bürstenkopf von einem Motor angetrieben wird.\\
-Das Jahr 2002 gilt als Höhepunkt des fünften Kondratieff-Zyklus und die Gesellschaft befindet sich gerade im Übergang zum Sechsten. Noch fehlt die aktuelle Basisinnovation und auch das nächste zu stillende Bedürfnis ist nach Individualität und Kommunikation(Abbildung \ref{zyklen}) noch nicht bestimmt.\\
+
+
+
+Das Jahr 2002 gilt als Höhepunkt des fünften Kondratieff-Zyklus und die Gesellschaft befindet sich gerade im Übergang zum Sechsten. Noch fehlt die aktuelle Basisinnovation und auch das nächste zu stillende Bedürfnis ist nach Individualität und Kommunikation (Abbildung \ref{zyklen}) noch nicht bestimmt.\\
 Nach Nefiodow \cite{nefiodow:gesundheit} gibt es vier Möglichkeiten welcher Markt in Zukunft den sechsten Kondratieff prägen wird:
 \begin{itemize}
   \item \textbf{Informationsmarkt} \\
@@ -42,6 +44,7 @@ Nach Nefiodow \cite{nefiodow:gesundheit} gibt es vier Möglichkeiten welcher Mar
   		Der Gesundheitsmarkt vereint technologische Komponenten wie die Medizintechnik und psychosoziale Gesundheit. Es erfolgt ein Wechsel vom heutigen \glqq Krankheitswesen\grqq\ zum Gesundheitswesen, angefangen von der Burnout-Prophylaxe und dem  Gesundheitstourismus, bis zur Bionik und künstlichen computergesteuerten Prothesen.
 \end{itemize}
 
+\FloatBarrier
 \section{Wachstumsmarkt Gesundheit}
 
 Nach Granig\cite{nefiodow:gesundheit} ist der Gesundheitsbereich der derzeit am schnellsten wachsende Markt\footnote{Gemessen am Anteil der Branche am Bruttoinlandsprodukt}. Die Bevölkerung ist gewillt in die eigene Gesundheit zu investieren und die Unternehmen positionieren sich im Gesundheitsbereich (Siemens beispielweise verstärkt sich im Bereich der Medizintechnik \cite[S.111, 112]{nefiodow:gesundheit})
@@ -49,12 +52,13 @@ Die Bio- und Nanotechnologie und die Medizintechnik ähneln sich in einigen Bere
 Die Entwicklung für den wachsenden Markt findet in den Unternehmen statt. Der Grundstein für Innovation wird jedoch bei den Studierenden der Hochschulen und Universitäten gelegt. Die Bildungseinrichtungen werden ein zentrales Standbein für den kommenden sechsten Kondratieff mit einem Schwerpunkt Bio-, Medizintechnik und Gesundheit sein.
 
 %Cord schreibt, dass 100\% des Wissens der Biotechnik aus Hochschulwissen stammt (allerdings aufgrund der erwähnten Einschränkungen noch nicht ökonomisch verwertet werden kann). Zwar trifft diese %hohe Prozentzahl nicht auf die Medizintechnik zu, da viel Entwicklung in den Unternehmen stattfindet, doch der Grundstein für Innovation wird bei den Studierenden der Hochschulen und %Universitäten gelegt. Die Bildungseinrichtungen werden ein zentrales Standbein für den kommenden sechsten Kondratieff mit einem Schwerpunkt Bio-, Medizintechnik und Gesundheit sein.
-
+\FloatBarrier
 \section{Der Studiengang Biomedizinische Technik}\label{einleitung:biomedTechnik}
 In einem Onlineartikel vom Februar 2012\footnote{https://www.haw-landshut.de/aktuelles/news/news-archiv/news-detailansicht/article/neuer-studiengang-biomedizinische-technik-vielfaeltige-berufschancen.html \\ abgerufen am 10.01.2014} veröffentlichte die Hochschule Landshut, dass ab dem Wintersemester 2012 der neue Bachelorstudiengang \glqq Biomedizinische Technik\grqq\ angeboten wird. Der Artikel beschreibt, ähnlich wie Granig, die Medizintechnik als Wachstumsmarkt und bestätigt durch die Einführung des Studiengangs das gesellschaftlich gesteigerte Interesse am Gesundheitswesen.\\
 Während des Studienverlaufs \cite{hsla:modulBMT} erwerben die Studierenden vor allem im zweiten Studienabschnitt Kenntnisse im Bereich der Medizintechnik. Die Ausbildung behandelt unter anderem bildgebende Systeme, medizinische Bildverarbeitung und minimalinvasive Therapieverfahren.\\
 Für die Ausbildung stehen Labore mit den benötigten Geräten zur Verfügung, um mit dem theoretischen Wissen praktisch zu experimentieren.
 
+\FloatBarrier
 \section{Das Labor für medizinische Bildverarbeitung, Algorithmen und Krankenhaus IT}\label{einleitung:labor}
 Das Labor erfüllt zwei Aspekte. Die Ausstattung steht für Forschungs- und Entwicklungsarbeiten zur Verfügung. Gemeinsame Forschungsprojekte von Hochschule und Krankenhäusern oder Unternehmen können hier umgesetzt werden.
 Für die Lehre soll Studierenden die Möglichkeit geboten werden, den Prozess der medizinischen Bildverarbeitung anschaulich und praxisnah zu erleben. Mittels Doppler-Ultraschallgerät können Bilddaten erzeugt und anschließend an das Picture Archiving and Communication System\footnote{Ein PACS dient als zentraler Bildspeicher, der über das Netzwerk angesprochen werden kann. Medizinische Geräte legen dort die Bilddaten ab, während die Software zur Betrachtung die Daten vom PACS holt.} (PACS) gesendet werden. Anschließend können Algorithmen zur Bildvorverarbeitung, Merkmalsextraktion oder auch Segmentierung implementiert und getestet werden.\\
